--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/ItalianChickenMarinade.html">Italian ItalianChickenMarinade</a></li>
-        <li><a href="recipes/MarinatedGrilledPork.html">Italian ItalianChickenMarinade</a></li>
-        <li><a href="recipes/PinkLemonade.html">Italian ItalianChickenMarinade</a></li>
+        <li><a href="recipes/ItalianChickenMarinade.html">Italian Chicken Marinade</a></li>
+        <li><a href="recipes/MarinatedGrilledPork.html">Marinated Grilled Pork</a></li>
+        <li><a href="recipes/PinkLemonade.html">Pink Lemonadde</a></li>
     </ul>
 </body>
 </html>
