--- a/recipes/ItalianChickenMarinade.html
+++ b/recipes/ItalianChickenMarinade.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Italian Chicken Marinade</h1>
-    <img href="image.png">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F07%2F09%2F665982-italian-chicken-marinade-wannabe-chefette-4x3-1.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
     <h2>Description</h2>
     <p>This Italian dressing chicken marinade is a super simple but delicious way to add flavor before grilling</p>
     <h3>Ingredients</h3>
