--- a/recipes/PinkLemonade.html
+++ b/recipes/PinkLemonade.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Pink Lemonade</h1>
-    <img href="https://www.allrecipes.com/thmb/9jDBY1TeIc8Cg75amatOb0hYhm8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/5478432-47ad16b56076489881c6b570993aaeec.jpg">
+    <img src="https://www.allrecipes.com/thmb/9jDBY1TeIc8Cg75amatOb0hYhm8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/5478432-47ad16b56076489881c6b570993aaeec.jpg">
     <h2>Description</h2>
     <p>Pink lemonade is a wonderfully refreshing drink during the hot summer months. Garnish with mint leaves and orange or lemon slices.</p>
     <h3>Ingredients</h3>
